# edgescan-client

./: .gitignore  .markdownlint.json  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
docs/: Makefile
docs/diagrams/: assets.dot  hosts.dot  relationships.dot  services.dot  vulnerabilities.dot
edgescan/: cli.py  client.py  constants.py  serializer.py  time.py
resources/images/: edgescan-data-model.xmind
tests/: client.py  runner.py  test_cli.py
tests/integration/: test_lookup_objects.py  test_parsers.py
