[tool.poetry]
name = "edgescan"
version = "3.0.0"
description = "An API client for Edgescan"
authors = ["Tyler Fisher <tylerfisher@tylerfisher.ca>"]
license = "MIT"
repository = 'https://github.com/whitfieldsdad/edgescan-client'
readme = 'README.md'

[tool.poetry.scripts]
edgescan = "edgescan.cli:cli"
script = "edgescan.cli:cli"
tool = "edgescan.cli:cli"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
pandas = "^2.1.4"
requests = "^2.31.0"
click = "^8.1.7"
certifi = "^2023.11.17"

[tool.poetry.dev-dependencies]
coverage = "^6.1.2"
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
